tests/fixtures/LatestTests/ConstVariableDeclarationTests/errors/int64_to_int8.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
const x:int8 = 5l

